Release notes for xmlBlaster @version@ (http://www.xmlBlaster.org)

Changes for 0.903 [2004-05-13]
==============================

 o Fixed telnet access bug which was introduced in 0.902

 o C client library
   - Bugfix: hostname copy from command line
   - Added property dump

 o C++ client library
   - Bugfix: Client side Address was hold twice (in ConnectQos and in ClientQueueProperty)
     and was not dumped with toXml()

Changes for 0.902 [2004-05-11]
==============================

 o RunlevelManager: Fixed PRE/POST event traversal

 o SOCKET protocol: Fixed memory leak on timeout exception, added marker for serverSide exception

 o Ping is now returning AvailabilityChecker information to support
   an application level ping for different run levels.
   Extended Java client library to react accordingly.

 o Changed the admin interface to take a key and a qos (this affects only get)

 o C++ client library got support for a client side persistent queue, see
    http://www.xmlblaster.org/xmlBlaster/doc/requirements/client.cpp.queue.html

 o C++ client library
   - Introduced abstract queue interface (I_Queue) and queue factory
     to be able to add arbitrary queue implementations as plugins.
   - Bugfix for default logging: loglevel settings inherited from I_Log
   - Bugfix reading of xmlBlaster.properties: Line extensions are now recognized
   - Extended Property class to preset ${user.home}, ${user.name},
     ${file.separator} and ${path.separator} to support replacement in xmlBlaster.properties
   - Bugfix of failsafe mode when a publish noticed connection loss before ping thread
   - Changed to activate failsafe mode even without a connectionProblem listener
     if -dispatch/connection/delay is > 0

Changes for 0.901 [2004-04-27]
==============================

 o Added persistent session and persistent subscriptions for
   revovery after server crash or server restart: